Kipi-plugins 4.0.0 - Release date: 2013/10/20
------------------------------------------------------------------------

NEW FEATURES:

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 319664 - kipi-plugins 3.2.0-beta2 (and 3.1.0) installs a static archive /usr/lib64/libPropertyBrowser.a.
002 ==> 