@@ -9,6 +9,7 @@
  * Copyright (C) 2011      by Alexandre Mendes <alex dot mendes1988 at gmail dot com>
  * Copyright (C) 2011-2012 by Gilles Caulier <caulier dot gilles at gmail dot com>
  * Copyright (C) 2012      by Parthasarathy Gopavarapu <gparthasarathy93 at gmail dot com>
+ * Copyright (C) 2013      by Peter Potrowl <peter dot potrowl at gmail dot com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -48,15 +49,14 @@ public:
     ~WMWindow();
 
     void reactivate();
-    QString getImageCaption(const QString& fileName);
-    bool prepareImageForUpload(const QString& imgPath, QString& caption);
+    bool prepareImageForUpload(const QString& imgPath);
 
 private Q_SLOTS:
 
     void slotClose();
     void slotStartTransfer();
     void slotChangeUserClicked();
-    void slotDoLogin(const QString& login, const QString& pass, const QUrl& wiki);
+    void slotDoLogin(const QString& login, const QString& pass, const QString& wikiName, const QUrl& wikiUrl);
     void slotEndUpload();
     int  slotLoginHandle(KJob* loginJob);
 
